// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`local integration test common config init getFeatureValue, changeFeatureValue with scopes 1`] = `
[
  {
    "errorMessage": "value "{0}" does not match validation regular expression {1}",
    "errorMessageValues": [
      10,
      "/^\\d{1}$/",
    ],
    "featureKey": "test/feature_e",
    "scopeKey": "component::c1##tenant::t1",
  },
]
`;

exports[`local integration test common config init getFeatureValue, changeFeatureValue with scopes 8`] = `[]`;

exports[`local integration test common config init getFeatureValue, changeFeatureValue with scopes and clearSubScopes, resetFeatureValue 7`] = `[]`;

exports[`local integration test common config init getFeatureValue, changeFeatureValue without scopes 1`] = `
[
  {
    "errorMessage": "value "{0}" does not match validation regular expression {1}",
    "errorMessageValues": [
      10,
      "/^\\d{1}$/",
    ],
    "featureKey": "test/feature_e",
    "scopeKey": "//",
  },
]
`;

exports[`local integration test common config init getFeatureValue, changeFeatureValue without scopes 4`] = `[]`;

exports[`local integration test common config init getFeaturesKeys, getFeatureValues, getFeaturesInfos 1`] = `
{
  "test/feature_a": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "boolean",
    },
    "fallbackValue": false,
  },
  "test/feature_aa": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "boolean",
      "VALIDATIONS": [
        {
          "scopes": [
            "tenant",
            "user",
          ],
        },
      ],
    },
    "fallbackValue": false,
  },
  "test/feature_b": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "number",
    },
    "fallbackValue": 1,
  },
  "test/feature_c": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "string",
    },
    "fallbackValue": "best",
  },
  "test/feature_d": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "boolean",
      "VALIDATIONS": [
        {
          "regex": "^(?:true)$",
        },
      ],
    },
    "fallbackValue": true,
  },
  "test/feature_e": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "number",
      "VALIDATIONS": [
        {
          "scopes": [
            "component",
            "layer",
            "tenant",
          ],
        },
        {
          "regex": "^\\d{1}$",
        },
      ],
    },
    "fallbackValue": 5,
  },
  "test/feature_f": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "string",
      "VALIDATIONS": [
        {
          "regex": "^(?:best|worst)$",
        },
      ],
    },
    "fallbackValue": "best",
  },
  "test/feature_g": {
    "config": {
      "ACTIVE": false,
      "SOURCE": "RUNTIME",
      "TYPE": "string",
    },
    "fallbackValue": "activeTest",
  },
  "test/feature_h": {
    "config": {
      "APP_URL": "\\.cfapps\\.sap\\.hana\\.ondemand\\.com$",
      "SOURCE": "RUNTIME",
      "TYPE": "string",
    },
    "fallbackValue": "appUrlTest",
  },
}
`;
